--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,13 @@
 body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifTahoma, sans-serif;
+    background-image: url(https://wallpapercave.com/wp/Z4CD0Ic.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    /* background-color: #cccccc; */
 }
+
 
 
 #heading, #momentDate {
@@ -10,10 +17,13 @@ body {
 }
 
 #heading {
-   background:linear-gradient(#e66465, #9198e5);
-   padding: 30px;
+   background:linear-gradient(#649ae61a, #ed35cb4c);
+   padding: 70px;
    color: #fff;
-   font-size: 50px;
+   font-size: 150px;
+   max-width: 100%;
+   border-radius: 130px;
+   box-shadow: -3px 2px 20px 3px rgba(0,0,0,0.49);
 }
 
 .fiveDayForecast {
@@ -22,20 +32,72 @@ body {
     align-items: flex-start ;
     flex-direction: row;
     justify-content: flex-start;
+    color:#fff;
+}
+
+.weatherBox {
+    border-radius: 25px;
+    padding: 40px;
+    margin-right: 40px;
+    background-color: rgba(0, 217, 255, 0.369);
+    color:#fff;
+    box-shadow: -3px 2px 20px 3px rgba(0,0,0,0.49);   
+}
+
+.searchBtn {
+    color:#fff;
+    font-size: 30px;
+    margin-left: 30px;
+}
+
+#searchBtn {
+  height: 36px;
+  width: 150px;
+  border: 1px solid #00B4CC;
+  margin-left:45px;
+  margin-top: 10px;
+  background: #ffffff29;
+  text-align: center;
+  color: #fff;
+  border-radius:15px;
+  cursor: pointer;
+  font-size: 20px;
+  box-shadow: -3px 2px 20px 3px rgba(0,0,0,0.49);
+}
+
+.searchBar{
+    border: 5px solid #030303;
+    margin-left: 20px;
+    padding: 15px;
+    height: 20px;
+    border-radius: 15px;
+    box-shadow: 3px 2px 10px 3px rgba(0,0,0,0.49) inset;
+}
+
+.searchHeader {
+    margin-bottom: 5px;
+    font-size: 40px;
+}
+
+#WeatherData {
+    color: #fff;
+    text-align: center;
+}
+
+#currentData {
+    padding-bottom: 100px;
+    font-size: 50px;
+}
+
+.fiveDay {
+    font-size: 40px;
+    text-shadow:0px 4px 3px rgba(0,0,0,0.4),
+    0px 8px 13px rgba(0,0,0,0.4),
+    0px 18px 23px rgba(0,0,0,0.4);
 }
 
 #box0{
     margin-left: 30px;
-}
-
-
-#box0, #box1, #box2, #box3, #box4 {
-    margin-right: 40px;
-    background-color: aquamarine;
-    padding: 40px;
-}
-
-#citySearch {
 
 }
 
