--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,8 @@ body {
 
 .fiveDayForecast {
     margin: 30px ;
+    margin-left: 350px;
+    padding-bottom: 50px;
     display: flex ;
     align-items: flex-start ;
     flex-direction: row;
@@ -48,6 +50,7 @@ body {
     color:#fff;
     font-size: 30px;
     margin-left: 30px;
+    text-align: center;
 }
 
 #searchBtn {
@@ -67,6 +70,7 @@ body {
 
 .searchBar{
     border: 5px solid #030303;
+    width: 230px;
     margin-left: 20px;
     padding: 15px;
     height: 20px;
@@ -91,6 +95,7 @@ body {
 
 .fiveDay {
     font-size: 40px;
+    text-align: center;
     text-shadow:0px 4px 3px rgba(0,0,0,0.4),
     0px 8px 13px rgba(0,0,0,0.4),
     0px 18px 23px rgba(0,0,0,0.4);
