--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifTahoma, sans-serif;
-    background-image: url(https://wallpapercave.com/wp/Z4CD0Ic.jpg);
+    background-image: url(https://i.pinimg.com/originals/31/c3/3c/31c33c2a5209e8301532bd87ef9ad8df.jpg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -17,12 +17,12 @@ body {
 }
 
 #heading {
-   background:linear-gradient(#649ae61a, #ed35cb4c);
+   background:linear-gradient(#1d6ee06e, #ed35cb4c);
    padding: 70px;
    color: #fff;
    font-size: 150px;
    max-width: 100%;
-   border-radius: 130px;
+   border-radius: 10px 10px 130px 130px;
    box-shadow: -3px 2px 20px 3px rgba(0,0,0,0.49);
 }
 
@@ -42,8 +42,9 @@ body {
     padding: 40px;
     margin-right: 40px;
     background-color: rgba(0, 217, 255, 0.369);
+    border: #fff solid 2px;
     color:#fff;
-    box-shadow: -3px 2px 20px 3px rgba(0,0,0,0.49);   
+    box-shadow: -3px 2px 20px 3px rgba(255, 255, 255, 0.49);   
 }
 
 .searchBtn {
@@ -65,7 +66,7 @@ body {
   border-radius:15px;
   cursor: pointer;
   font-size: 20px;
-  box-shadow: -3px 2px 20px 3px rgba(0,0,0,0.49);
+  box-shadow: -3px 2px 20px 3px rgba(255, 255, 255, 0.49);
 }
 
 .searchBar{
@@ -75,7 +76,7 @@ body {
     padding: 15px;
     height: 20px;
     border-radius: 15px;
-    box-shadow: 3px 2px 10px 3px rgba(0,0,0,0.49) inset;
+    box-shadow: 3px 2px 10px 3px rgba(255, 255, 255, 0.49) inset;
 }
 
 .searchHeader {
@@ -96,15 +97,38 @@ body {
 .fiveDay {
     font-size: 40px;
     text-align: center;
-    text-shadow:0px 4px 3px rgba(0,0,0,0.4),
+    text-shadow:0px 4px 3px rgba(0, 0, 0, 0.4),
     0px 8px 13px rgba(0,0,0,0.4),
     0px 18px 23px rgba(0,0,0,0.4);
 }
 
 #box0{
     margin-left: 30px;
-
 }
 
+#currentForecast{
+    background: rgba(24, 24, 27, 0.349);
+    margin-left: 635px;
+    margin-top: 30px;
+    width: 1150px;
+    border-radius: 30px;
+    border: #fff solid 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    justify-items:center;
+    flex-direction: column;
+    padding: 25px;
+    color:#fff;
+}
 
+#currentData {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    color:#fff;
+}
 
